# caracal-python

./: LICENSE  README.md  pyproject.toml
caracal/: __init__.py  datagetter.py  inventorybuilder.py  position.py  syslogparser.py
tests/: test_syslog.py
