# pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caracal"
version = "0.1.0"
description = "Python libraries for ingesting, querying and returning data from Caracal acoustic sensors"
authors = [{ name = "Andrew Markham", email = "andrew.markham@cs.ox.ac.uk" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.2",
    "pytz"  
]
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/acmarkham/caracal-python"
"Source" = "https://github.com/acmarkham/caracal-python/caracal"
"Examples" = "https://github.com/acmarkham/caracal-python/notebooks"

[tool.setuptools]
packages = ["caracal"]  # Only include your actual package