# pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caracal"
version = "0.1.0"
description = "Python libraries for ingesting, querying and returning data from Caracal acoustic sensors"
authors = [{ name = "Andrew Markham", email = "andrew.markham@cs.ox.ac.uk" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.2",
    "pytz",
    "tqdm",          # Added for progress bars in InventoryBuilder
    "obspy",         # Added for ObsPy integration in DataGetter
    "soundfile",     # Added for efficient WAV file loading in DataGetter
    "scipy",         # Added for wavfile.read in DataGetter's legacy method
    "pyproj",        # Added for coordinate transformations in position.py
]
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/acmarkham/caracal-python"
"Source" = "https://github.com/acmarkham/caracal-python/caracal"
"Examples" = "https://github.com/acmarkham/caracal-python/notebooks"

[tool.setuptools]
packages = ["caracal"] # Only include your actual package